src/styles/components/projects-grid.css
.projects-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, 400px);
  margin-top: 5em;
  justify-content: space-between;
  gap: 2em;
}

.project {
  width: 400px;
  height: 500px;
  border-radius: 10px;
  box-shadow: var(--boxshadow);
  background-color: #545b74;
  padding: 0.25em;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
}

.project:hover {
  transform: scale(1.05);
}

.project h2 {
  text-align: center;
}

.project .image-container {
  width: 380px;
  height: 325px;
  border-radius: 5px;
  grid-column: 2 / 3;
  margin: auto;
}

.project .image-container img {
  max-width: 100%;
  max-height: 325px;
}

.btn-project-link {
  background-color: var(--color-primary);
  color: var(--colo-black);
}

@media screen and (max-width: 600px) {
  .project {
    max-width: 270px;
  }

  .project .image-container {
    width: 200px;
    margin: auto;
    height: 280px;
  }

  .project .image-container img {
    width: auto;
    height: auto;
    max-width: 200px;
  }

  .project .button-container {
    flex-direction: column;
  }

  .project .button-container .btn-project-link {
    margin: 0 auto;
  }
}

